helloworld_nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: hello-nodeport
  namespace: default
spec:
  type: NodePort
  selector:
    app: hello-world
  ports:
    - name: web
      port: 8080
      targetPort: web
      nodePort: 31080
